# coin_detector

./: .gitignore  CMakeLists.txt  README.md
src/: .detector.cpp.swp  detector.cpp  histoC.cpp  meaner.cpp  pseudoDetector.cpp
